add duobago for db,adb for HubEvent

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'org.greenrobot.greendao'//添加greenDao的插件
 android {
     compileSdkVersion 28
     buildToolsVersion '28.0.3'
@@ -10,12 +10,28 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                includeCompileClasspath = true
+            }
+        }
+    }
+    greendao {//添加GreenDao的生成路径
+        schemaVersion 1
+        targetGenDir 'src/main/java'
+        daoPackage 'com.rmicro.launcher.dao'
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
     }
 }
 
@@ -28,4 +44,6 @@ dependencies {
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'org.greenrobot:greendao:3.+'
+    implementation 'org.greenrobot:eventbus:3.0.0'
 }
